# ocaml_chatroom

./: README.md  dune-project  ocaml_chatroom.opam  try_tomorrow.md
_build/: .db  .digest-db  log
_build/default/: ocaml_chatroom.dune-package  ocaml_chatroom.install  ocaml_chatroom.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/bcab0be011c28261c514e69f4fe141f8/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/client/: client.ml  client.pp.ml
_build/default/client/.client.eobjs/byte/: dune__exe__Client.cmi  dune__exe__Client.cmti
_build/default/client/.client.eobjs/native/: dune__exe__Client.cmx
_build/default/client/.merlin-conf/: exe-client
_build/default/lib/: server.cma  server.cmxa  server.cmxs  server.ml  server.pp.ml
_build/default/lib/.merlin-conf/: lib-server
_build/default/lib/.server.objs/byte/: server.cmi  server.cmo  server.cmt
_build/default/lib/.server.objs/native/: server.cmx
_build/default/server/: main.pp.ml
_build/default/server/.main.eobjs/byte/: dune__exe__Main.cmti
_build/default/server/.main.eobjs/native/: dune__exe__Main.cmx
_build/default/server/.merlin-conf/: exe-main
_build/default/test/.merlin-conf/: exe-test_ocaml_chatroom
_build/default/test/.test_ocaml_chatroom.eobjs/byte/: dune__exe__Test_ocaml_chatroom.cmi  dune__exe__Test_ocaml_chatroom.cmti
_build/default/test/.test_ocaml_chatroom.eobjs/native/: dune__exe__Test_ocaml_chatroom.cmx
client/: client.ml  dune
lib/: dune  server.ml
server/: dune  main.ml
test/: dune
(+3 files in other folders)
